# 2026_smac_lab_git

./: ps5.py
ebimu_pkg/: setup.py
ebimu_pkg/ebimu_pkg/: ebimu_node.py  ebimu_publisher.py  imu_odometry.py
ekf_localization/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ekf_localization/config/: ekf.yaml  ublox_rover.yaml
ekf_localization/ekf_localization/: gps_reliability_filtered.py
ekf_localization/launch/: ekf_localization.launch.py
gps_imu/: package.xml  setup.cfg  setup.py
gps_imu/launch/: gps_imu.launch.py
imu_encoder/: package.xml  setup.cfg  setup.py
imu_encoder/imu_encoder/: imu_encoder.py
install/: setup.bash  setup.ps1  setup.sh  setup.zsh
lidar_cluster/: package.xml  setup.cfg  setup.py
lidar_cluster/lidar_cluster/: lidar_cluster_node.py  lidar_dbscan_node.py
lidar_tools/: package.xml  setup.cfg  setup.py
lidar_tools/lidar_tools/: lidar_closest.py  lidar_front_filter.py
ntrip_client/: CHANGELOG.rst  LICENSE  README.md  setup.py
ntrip_client/launch/: ntrip_client.launch.py
ntrip_client/scripts/: ntrip_ros.py  ntrip_ros_base.py  ntrip_serial_device_ros.py
python/: extract_to_csv.py  gps_vel.py  imu_odometry.py  pose_log_extract.py  ps5.py
python/log/: _imu_data.csv  _odometry_filtered.csv  _odometry_gps.csv  _odometry_gps.ods  _odometry_imu_encoder.csv  _ublox_gps_node_fix.csv  _vehicle_encoder_velocity.csv
ros2_cv_webcam/: package.xml  setup.cfg  setup.py
ros2_cv_webcam/ros2_cv_webcam/: ros2_cv_webcam_publisher.py
rplidar_ros/launch/: rplidar_a2m12_launch.py
ublox/: README.md
ublox/ublox/: CHANGELOG.rst  (+1 more)
(+14 files in other folders)
